--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/Kenzie-Academy-Brasil/sonhar.git",
+  "author": "Tiago Alves <tiago@kenzie.com.br>",
+  "license": "MIT"
 }
