--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "3",
     "cra-template": "1.0.3",
+    "primeicons": "^4.0.0",
+    "primereact": "^4.2.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
