--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/styled-components": "^5.1.1",
     "axios": "^0.19.2",
     "bootstrap": "3",
     "cra-template": "1.0.3",
