--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "primereact": "^4.2.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
+    "react-sizeme": "^2.6.12",
     "styled-components": "^5.1.1"
   },
   "scripts": {
