--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
